--- a/server/package.json
+++ b/server/package.json
@@ -16,22 +16,24 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "http-status-codes": "^1.3.0",
-    "mongoose": "^5.3.4",
-    "twilio": "^3.23.1",
+    "mongoose": "^5.3.10",
+    "twilio": "^3.23.2",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
+    "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/mongodb": "^3.1.12",
-    "@types/mongoose": "^5.2.19",
+    "@types/mongodb": "^3.1.14",
+    "@types/mongoose": "^5.3.1",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.0.1",
-    "nodemon": "^1.18.4",
-    "typescript": "^3.1.3"
+    "dotenv": "^6.1.0",
+    "nodemon": "^1.18.6",
+    "typescript": "^3.1.6"
   }
 }
