--- a/server/package.json
+++ b/server/package.json
@@ -14,26 +14,33 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "http-status-codes": "^1.3.0",
-    "mongoose": "^5.3.10",
-    "twilio": "^3.23.2",
+    "mongoose": "^5.3.14",
+    "morgan": "^1.9.1",
+    "twilio": "^3.24.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
-    "@types/mongodb": "^3.1.14",
-    "@types/mongoose": "^5.3.1",
+    "@types/express-session": "^1.15.11",
+    "@types/mongodb": "^3.1.15",
+    "@types/mongoose": "^5.3.2",
+    "@types/morgan": "^1.7.35",
     "@types/uuid": "^3.4.4",
-    "concurrently": "^4.0.1",
-    "dotenv": "^6.1.0",
-    "nodemon": "^1.18.6",
-    "typescript": "^3.1.6"
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7",
+    "typescript": "^3.2.1"
   }
 }
