--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "http-status-codes": "^1.3.0",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0",
     "twilio": "^3.24.0",
     "uuid": "^3.3.2"
   },
@@ -38,6 +40,8 @@
     "@types/mongodb": "^3.1.15",
     "@types/mongoose": "^5.3.2",
     "@types/morgan": "^1.7.35",
+    "@types/passport": "^0.4.7",
+    "@types/passport-auth0": "^1.0.2",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7",
