--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run build:watch\" \"npm run debug\"",
+    "start": "concurrently \"npm run build:watch\" \"RUN_MODE=local npm run debug\"",
     "production": "node dist/index.js",
     "build": "tsc",
     "build:watch": "tsc -w",
