--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,4 +31,4 @@ services:
       - ./client:/client
       - /client/node_modules
     environment:
-      - API_URL=server:3000/api
+      - API_URL=http://localhost:3000/api
