--- a/now.json
+++ b/now.json
@@ -1,14 +1,14 @@
 {
   "version": 1,
   "type": "docker",
-  "name":"ohack2018",
+  "name":"easysms",
   "env": {
     "MONGO_URL":"@mongo-url",
-    "API_URL": "https://ohack2018-team19.now.sh/api",
+    "API_URL": "https://app.easysms.now.sh/api",
     "AUTH0_DOMAIN": "@auth0-domain",
     "AUTH0_CLIENT_ID":"@auth0-client-id",
     "AUTH0_CLIENT_SECRET":"@auth0-client-secret",
     "AUTH0_CALLBACK_URL":"@auth0-callback-url"
   },
-  "alias": "https://ohack2018-team19.now.sh"
+  "alias": "https://app.easysms.now.sh"
 }
