--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sentry/browser": "^4.4.2",
     "axios": "^0.18.0",
     "basscss": "^8.0.4",
     "basscss-basic": "^1.0.0",
