--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "debug": "nodemon --inspect=0.0.0.0:9229 --delay 2500ms dist/index.js",
-    "asksaf": "asdf"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -37,6 +37,8 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
+    "@types/jest": "^23.3.11",
+    "@types/mockingoose": "^2.11.0",
     "@types/mongodb": "^3.1.17",
     "@types/mongoose": "^5.3.5",
     "@types/morgan": "^1.7.35",
@@ -44,7 +46,12 @@
     "@types/passport-auth0": "^1.0.2",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
+    "jest": "^23.6.0",
+    "jest-express": "^1.9.3",
+    "mockingoose": "^2.12.0",
     "nodemon": "^1.18.8",
+    "ts-jest": "^23.10.5",
+    "ts-lint": "^4.5.1",
     "typescript": "^3.2.2"
   }
 }
