--- a/now.json
+++ b/now.json
@@ -10,12 +10,5 @@
     "AUTH0_CLIENT_SECRET":"@auth0-client-secret",
     "AUTH0_CALLBACK_URL":"@auth0-callback-url"
   },
-  "alias": "https://easysms-app.now.sh",
-  "features": { "cloud": "v1" },
-  "scale": {
-    "sfo1": {
-        "min": 1,
-        "max": 1
-    }
-  }
+  "alias": "https://easysms-app.now.sh"
 }
